# couchdb

./: CHANGELOG.md  Cargo.toml  ChangeLog.md  Checklist.md  README.md  checklist.md  rustfmt.toml
OLD/src/: lib.rs
doc/v0.0.0/: search-index.js
doc/v0.0.1/: search-index.js
doc/v0.1.0/: search-index.js
doc/v0.2.0/: search-index.js
doc/v0.3.0/: search-index.js
doc/v0.3.1/: search-index.js
doc/v0.4.0/: search-index.js
doc/v0.5.0/: search-index.js
doc/v0.5.1/: search-index.js
doc/v0.5.2/: search-index.js
doc/v0.6.0/: search-index.js
playground/: couchdb.ini  test
src/: attachment.rs  client.rs  database.rs  db.rs  dbpath.rs  design.rs  docid.rs  docpath.rs  document.rs  error.rs  json.rs  jsontest.rs  lib.rs  nok.rs  path.rs  revision.rs  root.rs  server.rs  transport.rs  viewfunction.rs  viewpath.rs  viewresult.rs  viewrow.rs
src/action/: delete_database.rs  delete_document.rs  get_all_databases.rs  get_all_dbs.rs  get_changes.rs  get_database.rs  get_document.rs  get_root.rs  get_view.rs  head_database.rs  head_document.rs  mod.rs  post_database.rs  post_to_database.rs  put_database.rs  put_document.rs  test_macro.rs
src/command/: delete_database.rs  delete_document.rs  get_all_databases.rs  get_database.rs  get_document.rs  get_view.rs  head_database.rs  head_document.rs  mod.rs  post_to_database.rs  put_database.rs  put_document.rs
src/db/: mod.rs  nok.rs  root.rs
src/dbtype/: base64_blob.rs  change_item.rs  change_line.rs  change_result.rs  changes.rs  content_type.rs  database.rs  database_name.rs  design.rs  design_document_name.rs  document.rs  document_id.rs  document_name.rs  embedded_attachment.rs  error_response.rs  errorresponse.rs  heartbeat.rs  impl_name_macro.rs  json.rs  misc_response.rs  mod.rs  putdocresponse.rs  response.rs  revision.rs  root.rs  since.rs  test_macro.rs  uuid.rs  view_function.rs  view_name.rs  view_result.rs  view_row.rs  viewresult.rs  viewrow.rs  writedocresponse.rs  (+1 more)
tests/: actions.rs  commands.rs
(+1048 files in other folders)
