[package]
name = "couchdb"
version = "0.6.0-master"
authors = ["Craig M. Brandenburg <c.m.brandenburg@gmail.com>"]
license = "MIT/Apache-2.0"
description = "CouchDB client library"
repository = "https://github.com/couchdb-rs/couchdb"
documentation = "https://couchdb-rs.github.io/couchdb/doc/v0.5.2/couchdb/"
keywords = ["couch", "couchdb", "database", "nosql"]

[dependencies]
base64 = "0.1.1"
hyper = "0.8"
mime = { version = "0.2.0, <= 0.2.0", features = [ "serde" ] }
regex = "0.1"
semver = "0.2.3"
serde = "0.7"
serde_json = "0.7"
tempdir = "0.3"
url = "0.5"
uuid = "0.1.18"

[lib]
name = "couchdb"
