[package]
name = "couchdb"
version = "0.6.0-master"
authors = ["Craig M. Brandenburg <c.m.brandenburg@gmail.com>"]
license = "MIT/Apache-2.0"
description = "CouchDB client library"
repository = "https://github.com/couchdb-rs/couchdb"
documentation = "https://couchdb-rs.github.io/couchdb/doc/v0.5.2/couchdb/"
keywords = ["couch", "couchdb", "database", "nosql"]

[dependencies]
futures = "0.1.14"
regex = "0.2.2"
reqwest = { git = "https://github.com/seanmonstar/reqwest.git", features = ["unstable"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempdir = "0.3.5"
tokio-core = "0.1.8"
url = "1.5"
