[package]
name = "couchdb"
version = "0.6.1-master"
authors = ["Craig M. Brandenburg <c.m.brandenburg@gmail.com>"]
license = "MIT/Apache-2.0"
description = "The couchdb library provides types for working with CouchDB."
repository = "https://github.com/couchdb-rs/couchdb"
documentation = "https://couchdb-rs.github.io/couchdb/doc/v0.6.0/couchdb/"
keywords = ["couch", "couchdb", "database", "nosql"]

[dependencies]
base64 = "0.6.0"
mime = "0.3.2"
regex = "0.2.2"
serde = "1.0"
serde_derive = "1.0"
tempdir = "0.3.5"
url = "1.5"
uuid = { version = "0.5.1", features = ["serde"] }

[dev-dependencies]
reqwest = "0.7.1"
serde_json = "1.0"
